Added button textures

--- a/Test/Test/Test.vcxproj
+++ b/Test/Test/Test.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Windows\MainMenu.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Windows\menuDefines.h" />
     <ClInclude Include="Windows\MainMenu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
