--- a/Test/Test/Test.vcxproj.filters
+++ b/Test/Test/Test.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Windows\MainMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Windows\menuDefines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
