--- a/Test/Test/Test.vcxproj
+++ b/Test/Test/Test.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -126,11 +126,14 @@
     <ClCompile Include="Units\Tile.cpp" />
     <ClCompile Include="Units\Unit.cpp" />
     <ClCompile Include="Windows\MainMenu.cpp" />
+    <ClCompile Include="Windows\Map.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Units\Tile.h" />
     <ClInclude Include="Units\Unit.h" />
     <ClInclude Include="Units\UnitDefines.h" />
+    <ClInclude Include="Windows\Map.h" />
+    <ClInclude Include="Windows\MapDefines.h" />
     <ClInclude Include="Windows\menuDefines.h" />
     <ClInclude Include="Windows\MainMenu.h" />
   </ItemGroup>
