Collisions are better and can destroy crates now. Create new header and cpp for Hero

--- a/Test/Test/Test.vcxproj
+++ b/Test/Test/Test.vcxproj
@@ -124,6 +124,7 @@
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:\C++ games\SFML-2.5.1\include</AdditionalIncludeDirectories>
     </ClCompile>
     <ClCompile Include="Units\Bomb.cpp" />
+    <ClCompile Include="Units\Hero.cpp" />
     <ClCompile Include="Units\Tile.cpp" />
     <ClCompile Include="Units\Unit.cpp" />
     <ClCompile Include="Windows\MainMenu.cpp" />
@@ -131,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Units\Bomb.h" />
+    <ClInclude Include="Units\Hero.h" />
     <ClInclude Include="Units\Tile.h" />
     <ClInclude Include="Units\Unit.h" />
     <ClInclude Include="Units\UnitDefines.h" />
